@@ -1,5 +1,5 @@
-val deployUsername: String? by extra // imported from settings.gradle.kts
-val deployPassword: String? by extra // imported from settings.gradle.kts
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+import org.gradle.kotlin.dsl.attributes
 
 plugins {
     // built-in
@@ -10,24 +10,35 @@ plugins {
     `maven-publish`
     `java-library`
 
-    id("org.sonarqube") version "3.1"
-    id("com.diffplug.spotless") version "5.9.0"
-    id("com.github.hierynomus.license") version "0.15.0"
-}
+    id("org.jsonschema2dataclass") version "4.2.0"
 
+    id("org.sonarqube") version "3.3"
+    id("com.diffplug.spotless") version "6.3.0"
+    id("com.github.hierynomus.license") version "0.16.1"
+
+    kotlin("jvm") version "1.6.10" // we can only upgrade to Kotlin 1.5, if CPG does
+}
 
 group = "de.fraunhofer.aisec"
 
 /* License plugin needs a special treatment, as long as the main project does not have a license yet.
-   See https://github.com/hierynomus/license-gradle-plugin/issues/155 
-*/
+ * See https://github.com/hierynomus/license-gradle-plugin/issues/155
+ */
 gradle.startParameter.excludedTaskNames += "licenseMain"
 gradle.startParameter.excludedTaskNames += "licenseTest"
 
+tasks {
+    jar {
+        manifest {
+            attributes("Implementation-Title" to "codyze",
+                    "Implementation-Version" to archiveVersion.getOrElse("0.0.0-dev"))
+        }
+    }
+}
 
 tasks.jacocoTestReport {
     reports {
-        xml.isEnabled = true
+        xml.required.set(true)
     }
 }
 
@@ -43,6 +54,9 @@ repositories {
     mavenLocal()
     mavenCentral()
 
+    maven { setUrl("https://jitpack.io") }
+
+
     // NOTE: Remove this when we "release". this is the public sonatype repo which is used to
     // sync to maven central, but directly adding this repo is faster than waiting for a maven central sync,
     // which takes 8 hours in the worse case. so it is useful during heavy development but should be removed
@@ -51,14 +65,19 @@ repositories {
         setUrl("https://oss.sonatype.org/content/groups/public")
     }
 
+    // Eclipse CDT repo
     ivy {
-        setUrl("https://download.eclipse.org/tools/cdt/releases/9.11/cdt-9.11.1/plugins")
+        setUrl("https://download.eclipse.org/tools/cdt/releases/10.3/cdt-10.3.2/plugins")
         metadataSources {
             artifact()
         }
         patternLayout {
             artifact("/[organisation].[module]_[revision].[ext]")
         }
+    }
+
+    maven { 
+        setUrl("https://jitpack.io")
     }
 }
 
@@ -74,73 +93,72 @@ configurations.all {
 }
 
 dependencies {
-    api("org.json:json:20201115")
-
-    api("org.apache.logging.log4j:log4j-slf4j18-impl:2.14.0")
-    api("org.apache.logging.log4j:log4j-core:2.14.0")
+    // Logging
+    implementation("org.slf4j:slf4j-api:1.8.0-beta4") // ok
     api("org.slf4j:log4j-over-slf4j:1.8.0-beta4") // needed for xtext.parser.antlr
-    api("org.slf4j:slf4j-api:1.8.0-beta4")
+    api("org.apache.logging.log4j:log4j-core:2.17.2") // impl in main; used only in test
+    runtimeOnly("org.apache.logging.log4j:log4j-slf4j18-impl:2.17.2")
+
+    // pull in explicitly to prevent mixing versions
+    implementation("org.jetbrains.kotlin:kotlin-reflect")
 
     // Code Property Graph
-    api("de.fraunhofer.aisec:cpg:3.2.0")
+    api("de.fraunhofer.aisec:cpg-core:4.3.5")
+    api("de.fraunhofer.aisec:cpg-analysis:4.3.5")
 
     // MARK DSL (use fat jar). changing=true circumvents gradle cache
-     api("de.fraunhofer.aisec.mark:de.fraunhofer.aisec.mark:1.4.0-SNAPSHOT:repackaged") { setChanging(true) }
+    //api("de.fraunhofer.aisec.mark:de.fraunhofer.aisec.mark:1.4.0-SNAPSHOT:repackaged") { isChanging = true } // ok
+    //api("com.github.Fraunhofer-AISEC.codyze-mark-eclipse-plugin:de.fraunhofer.aisec.mark:bbd54a7b11:repackaged") // pin to specific commit before annotations
+    api("com.github.Fraunhofer-AISEC.codyze-mark-eclipse-plugin:de.fraunhofer.aisec.mark:2.0.0:repackaged") // use GitHub release via JitPack
 
-    // LSP
-    api("org.eclipse.lsp4j:org.eclipse.lsp4j:0.10.0")
-
-    // JSON parser for generation of results file
-    api("org.json:json:20190722")
-
-    // JsonPath for querying JSON
-    api("com.jayway.jsonpath:json-path:2.5.0")
-
-    // Command line interface support
-    api("info.picocli:picocli:4.6.1")
-    annotationProcessor("info.picocli:picocli-codegen:4.6.1")
-
-    // Gremlin
-    api("org.apache.tinkerpop:gremlin-core:3.4.3")
-    annotationProcessor("org.apache.tinkerpop:gremlin-core:3.4.3") {
-        exclude(group = "org.slf4j", module = "slf4j-api")
-        exclude(group = "org.slf4j", module = "jcl-over-slf4j")
-    }      // Newer Gradle versions require specific classpath for annotatation processors
-    api("org.apache.tinkerpop:gremlin-python:3.4.3")
-    api("org.apache.tinkerpop:tinkergraph-gremlin:3.4.3")
-    api("org.apache.tinkerpop:gremlin-driver:3.4.3")
-    api("org.apache.tinkerpop:neo4j-gremlin:3.4.3")     // Neo4j multi-label support for gremlin
-
-    // Fast in-memory graph DB (alternative to Neo4J)
-    api("io.shiftleft:overflowdb-tinkerpop3:0.128")
-    api("org.reflections", "reflections", "0.9.11")
 
     // Pushdown Systems
-    api("de.breakpointsec:pushdown:1.1")
+    api("de.breakpointsec:pushdown:1.1") // ok
 
-    // Jython (Scripting engine)
-    api("org.python:jython-standalone:2.7.2")
+    // LSP interface support
+    api("org.eclipse.lsp4j:org.eclipse.lsp4j:0.12.0") // ok
 
-    testImplementation("org.junit.jupiter:junit-jupiter-api:5.7.0")
-    testImplementation("org.junit.jupiter:junit-jupiter-params:5.7.0")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.7.0")
+    // Interactive console interface support using Jython (Scripting engine)
+    implementation("org.python:jython-standalone:2.7.2") // ok
+
+    // Command line interface support
+    api("info.picocli:picocli:4.6.3")
+    annotationProcessor("info.picocli:picocli-codegen:4.6.3")
+
+    // Reflections for OverflowDB and registering Crymlin built-ins
+    implementation("org.reflections", "reflections", "0.10.2")
+
+    // Unit tests
+    testImplementation("org.jetbrains.kotlin:kotlin-test")
+    testImplementation("org.jetbrains.kotlin:kotlin-test-junit5")
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.8.2")
+    testImplementation("org.junit.jupiter:junit-jupiter-params:5.8.2")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.8.2")
+    implementation(kotlin("stdlib-jdk8"))
+
+    // Parser for yaml configuration file
+    api("com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.13.2")
 }
 
 application {
-    mainClassName = "de.fraunhofer.aisec.analysis.Main"
-    // Required to give Ehcache deep reflective access to fields to correctly esitmate the cache size.
-    applicationDefaultJvmArgs = listOf("--add-opens=java.base/java.lang=ALL-UNNAMED", "--add-opens=java.base/java.util=ALL-UNNAMED", "--add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED", "-Xss10M")
+    mainClass.set("de.fraunhofer.aisec.codyze.Main")
 }
+
 tasks.named<Test>("test") {
     useJUnitPlatform()
     maxHeapSize = "6000m"
 }
 
-// Persist source files generated by annotation processor to a sane source path so IDEs can use them directly.
+// Add generated sources from annotation processor to source sets so they can be picked up
 sourceSets.configureEach {
     tasks.named<JavaCompile>(compileJavaTaskName) {
-        options.annotationProcessorGeneratedSourcesDirectory = file("$projectDir/src/main/generated/annotationProcessor/java/${this@configureEach.name}")
-        java.srcDir(file("$projectDir/src/main/generated/annotationProcessor/java/main")) // adding as generated souce dir did not work in Idea 2019.1
+        java.srcDir(options.generatedSourceOutputDirectory.get())
+    }
+}
+
+tasks.withType<KotlinCompile>().configureEach {
+    kotlinOptions {
+        freeCompilerArgs = freeCompilerArgs + "-Xopt-in=kotlin.RequiresOptIn"
     }
 }
 
@@ -153,20 +171,24 @@ tasks.named("compileJava") {
     dependsOn(":spotlessApply")
 }
 
+// state that JSON schema parser must run before compiling Kotlin
+tasks.named("compileKotlin") {
+    dependsOn(":generateJsonSchema2DataClass")
+}
 
 tasks.named("sonarqube") {
     dependsOn(":jacocoTestReport")
 }
 
-
 spotless {
     java {
-        targetExclude(
-                fileTree(project.projectDir) {
-                    include("src/main/generated/**")
-                }
-        )
+        // exclude automatically generated files
+        targetExclude("build/generated/**/*.java")
         eclipse().configFile(rootProject.file("formatter-settings.xml"))
+    }
+
+    kotlin {
+        ktfmt().kotlinlangStyle()
     }
 }
 
@@ -177,7 +199,27 @@ downloadLicenses {
 
 tasks.named<CreateStartScripts>("startScripts") {
     doLast {
-        // workaround for https://github.com/gradle/gradle/issues/1989
+        /* On Windows the classpath can be too long. This is a workaround for https://github.com/gradle/gradle/issues/1989
+         * 
+         * The problem doesn't seem to exist in the current version, but may reappear, so we're keeping this one around.
+         */
         windowsScript.writeText(windowsScript.readText().replace(Regex("set CLASSPATH=.*"), "set CLASSPATH=%APP_HOME%\\\\lib\\\\*"))
     }
+}
+
+val compileKotlin: KotlinCompile by tasks
+compileKotlin.kotlinOptions {
+    jvmTarget = "11"
+}
+
+val compileTestKotlin: KotlinCompile by tasks
+compileTestKotlin.kotlinOptions {
+    jvmTarget = "11"
+}
+
+jsonSchema2Pojo {
+    source.setFrom("${project.rootDir}/src/main/resources/json")
+    targetPackage.set("de.fraunhofer.aisec.codyze.sarif.schema")
+    removeOldOutput.set(true)
+    // ... more options
 }
